src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Activity_Report_Active__c</fullName>
        <formula>(ISBLANK(Activity_Report_Start__c) &amp;&amp; ISBLANK(Activity_Report_End__c))
||
(Activity_Report_Start__c &lt;= TODAY() &amp;&amp; Activity_Report_End__c &gt;= TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Report Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Report_End__c</fullName>
        <label>Activity Report End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Report_Start__c</fullName>
        <label>Activity Report Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrokeredLive_Per_EC__c</fullName>
        <label>BrokeredLive Per EC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BrokeredLive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BrokeredLive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Search_Radius__c</fullName>
        <label>Default Search Radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EC_Activity_Report_Emails__c</fullName>
        <label>EC Activity Report Emails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EC_Activity_Report_Midweek__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Send report midweek rather than Friday</inlineHelpText>
        <label>EC Activity Report Midweek</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EC_Report_Emails__c</fullName>
        <label>EC Report Emails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_Results__c</fullName>
        <label>Employer Contact Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Followup_Results__c</fullName>
        <label>Followup Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Account__c</fullName>
        <formula>Id = $User.User_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Messages_From__c</fullName>
        <label>SMS Messages From</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Reminder_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <label>Sites</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Use_Worksheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Worksheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_As_Worksheet_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User As Worksheet Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wage_Subsidy_Logo__c</fullName>
        <label>Wage Subsidy Logo</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>EC_Report_Emails__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>